--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#002D72</color>
+    <color name="colorPrimaryDark">#CC0033</color>
     <color name="colorAccent">#FF4081</color>
+    <color name="bullDogRed">#CC0033</color>
+    <color name="bullDogBlue">#002D72</color>
+    <color name="victoryBlue">#0072CE</color>
+    <color name="cinderellaBule">#6CACE4</color>
 </resources>
