added documentation, renamed icon, cleaned code

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -37,7 +37,7 @@
             android:id="@+id/runningImageView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/runningIcon"
+            android:src="@drawable/running_icon"
             android:layout_marginRight="10dp"/>
 
         <TextView
