added shared preferences

--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -7,10 +7,15 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center_horizontal"
-    android:paddingTop="80dp"
+    android:paddingTop="20dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.example.technoforrest.sensorpedometer.MainActivity"
     tools:showIn="@layout/activity_main">
+
+    <View
+        android:layout_width="250dp"
+        android:layout_height="250dp"
+        android:background="@drawable/gonzaga_logo"/>
 
     <TextView
         android:id="@+id/name"
@@ -21,11 +26,12 @@
         android:id="@+id/stepsText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""
+        android:text="0.0"
+        android:textColor="@color/white"
         android:textSize="50dp"
-        android:layout_marginBottom="20dp"
-        android:textColor="@color/bullDogBlue"
-         />
+        android:layout_marginBottom="20dp"/>
+
+
 
     <LinearLayout
         android:layout_width="wrap_content"
@@ -46,7 +52,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="steps today"
-            android:textColor="@color/bullDogBlue"
+            android:textColor="@color/white"
+            android:textSize="30dp" />
+
+        <TextView
+            android:id="@+id/today"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/white"
             android:textSize="30dp" />
     </LinearLayout>
 
