--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,8 @@
     <color name="bullDogBlue">#002D72</color>
     <color name="victoryBlue">#0072CE</color>
     <color name="cinderellaBule">#6CACE4</color>
+    <color name="gradient_start">#CC0033</color>
+    <color name="gradient_end">#0072CE</color>
+    <color name="navy">#000080</color>
+    <color name="white">#ffff</color>
 </resources>
