--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -61,6 +61,15 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:textColor="@color/white"
+            android:text="SAVED STEPS"
+            android:textSize="30dp" />
+        <TextView
+            android:id="@+id/savedSteps"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:textColor="@color/white"
+            android:text="DAY OF WEEK"
             android:textSize="30dp" />
     </LinearLayout>
 
