--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -36,7 +36,7 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:orientation="vertical"
         android:gravity="center_horizontal">
 
         <ImageView
@@ -55,22 +55,15 @@
             android:textColor="@color/white"
             android:textSize="30dp" />
 
-        <TextView
-            android:id="@+id/today"
+        <Button
+            android:id="@+id/historyBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:textColor="@color/white"
-            android:text="SAVED STEPS"
-            android:textSize="30dp" />
-        <TextView
-            android:id="@+id/savedSteps"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:textColor="@color/white"
-            android:text="DAY OF WEEK"
-            android:textSize="30dp" />
+            android:text="History"
+            android:textSize="20dp"
+            android:background="@color/bullDogRed"
+            android:onClick="buttonOnClick"/>
     </LinearLayout>
 
 </LinearLayout>
